--- a/index.html
+++ b/index.html
@@ -3,9 +3,40 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <meta http-equiv="X-UA-Compatible" content="ie=Edge">
+  <link rel="stylesheet" href="./css/main.css">
+  <title>Weather App</title>
 </head>
 <body>
-  
+  <div class="card">
+    <div class="search">
+      <input type="text" placeholder="Enter City Name" spellcheck="false">
+      <button><img src="img/mag-icon.png"></button>
+    </div>
+
+    <div class="weather">
+      <img src="" class="weather-icon">
+      <h1 class="temp">22c</h1>
+      <h2 class="city">Nairobi</h2>
+      <div class="details">
+        <div class="col">
+          <img src="" alt="">
+          <div>
+            <p class="humidity">50%</p>
+            <p>Humidity</p>
+          </div>
+        </div>
+
+        <div class="col">
+          <img src="" alt="">
+          <div>
+            <p class="wind">15km/hr</p>
+            <p>Wind Speed</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <script src="./js/main.js"></script>
 </body>
 </html>
