--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
       <input type="text" placeholder="Enter City Name" spellcheck="false">
       <button><img src="img/mag-icon.png"></button>
     </div>
+    <div class="error">
+      <p>Invalid City Name</p>
+    </div>
 
     <div class="weather">
       <img src="" class="weather-icon">
